# pluma-parkinsons-ai

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: acquisition.yaml  integration.yaml  preprocessing.yaml  training.yaml
scripts/: smoke_test.py
src/: models.py  pipeline.py  utils.py
src/acquisition/: environmental.py  geo.py  manifest.py  ppmi.py
src/instruction_builder/: dataset_builder.py  formatter.py  templates.py
src/integration/: ensemble.py  mofa.py  snf.py  stage1_builder.py
src/preprocessing/: clinical.py  environmental_prep.py  epigenomics.py  genomics.py  metabolomics.py  microbiome.py  proteomics.py  transcriptomics.py
src/training/: model_utils.py  train.py
tests/: test_models.py  test_pipeline.py  test_utils.py
tests/acquisition/: test_environmental.py  test_geo.py  test_manifest.py  test_ppmi.py
tests/instruction_builder/: test_dataset_builder.py  test_formatter.py
tests/integration/: test_integration.py  test_mofa.py  test_stage1_builder.py
tests/preprocessing/: test_genomics.py  test_preprocessing_modules.py  test_transcriptomics.py
tests/training/: test_model_utils.py
