[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pluma-parkinsons-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "mofapy2>=0.7",
    "snfpy>=0.2",
    "cyvcf2>=0.30",
    "GEOparse>=2.0",
    "pysradb>=2.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "biopython>=1.83",
    "tqdm>=4.66",
    "pydeseq2>=0.4",
    "scikit-bio>=0.5",
]

[project.optional-dependencies]
training = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "accelerate>=0.28",
    "evaluate>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
